# device-repo

./: .gitignore  CMakeLists.txt  README.md  clean_prj.sh  make_prj.sh
ARMv7M-NVIC/: CMakeLists.txt  nvic.c
ArduinoDue/: CMakeLists.txt  arduino_ep.c  common.h  pmc.c  pmc.h  sketch_demo.ino  uart.c  uart.h  uotghs.c  uotghs.h
Cortex-M3/: CMakeLists.txt  cortex-m3.c
GenericRAM/: CMakeLists.txt  generic-ram.c
GenericROM/: CMakeLists.txt  generic-rom.c
LoggerC/: CMakeLists.txt  logger.c
LoggerPython/: .gitignore  CMakeLists.txt  logger.py
LoggerRust/: CMakeLists.txt  Cargo.toml
LoggerRust/.cargo/: config
LoggerRust/src/: rustlogger.rs
MemoryAlias/: CMakeLists.txt  memory-alias.c
